# serry

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: attr.rs  lib.rs  read.rs  sized.rs  util.rs  write.rs
derive/src/attr/: bounds.rs  extrapolate.rs  field_order.rs  version.rs
derive/src/util/: field_name.rs  variants.rs  where_pred.rs
examples/: checksums.rs  derive-custom-bounds.rs  derive-enum-repr.rs  derive-versioned.rs
src/: _internal.rs  alloc.rs  checksum.rs  ints.rs  lib.rs
src/read/: builtin.rs  mod.rs  wrap.rs
src/repr/: alloc.rs  containers.rs  mod.rs  nums.rs  os.rs  primitives.rs  tuples.rs
src/write/: builtin.rs  mod.rs  wrap.rs
