[package]
name = "serry"
version = "0.1.0"
edition = "2021"
description = """
Serry - the unstructured Serde.
"""

[dependencies]
byteorder = "1.4.3"
impl-trait-for-tuples = "0.2.2"
paste = "1.0.12"
sha2 = { version = "0.10.6", optional = true }

[features]
checksum-sha2 = ["checksum", "dep:sha2"]
checksum = []
