[workspace]
members = ["derive"]
resolver = "2"

[workspace.package]
authors = ["tecc"]
version = "0.1.1"
license = "Apache-2.0"
repository = "https://github.com/tecc/serry"
edition = "2021"

[package]
name = "serry"
description = """
Serry - the unstructured Serde.
"""
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1.4.3"
digest = { version = "0.10.7", optional = true }
impl-trait-for-tuples = "0.2.2"
paste = "1.0.12"
serry-derive = { version = "0.1.1", path = "./derive", optional = true }
sha2 = { version = "0.10.7", optional = true }

[features]
default = []
checksum = ["dep:digest"]
checksum-sha2 = ["checksum", "dep:sha2"]
derive = ["dep:serry-derive"]

[[example]]
name = "checksums"
required-features = ["derive", "checksum", "checksum-sha2"]

[[example]]
name = "derive-custom-bounds"
required-features = ["derive"]

[[example]]
name = "derive-enum-repr"
required-features = ["derive"]

[[example]]
name = "derive-versioned"
required-features = ["derive"]

[dev-dependencies]
rand = "0.8.5"
